--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,17 +1,32 @@
 {% extends "base.html" %} {% block content %}
+<div class="overlay"></div>
+<div class="helpWidget">
+    <div class="helpWidgetText" id="help-text">
+
+    </div>
+    <div class="helpButtons">
+        <div class="help-button" onclick="next()" id="next">
+            Continue
+        </div>
+        <div class="help-button" style="background: #ED3A46" onclick="back()" id="back">
+            Go Back
+        </div>
+    </div>
+
+</div>
 
 <link rel = "stylesheet"
           href = "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
-<div class = "dashboard-container">
-    <div class="left-widget visible">
-      <div class = "table-div">
+<div class = "dashboardContainer">
+    <div class="leftWidget visible">
+      <div class = "tableDiv">
       <script>
           function redirect(url) {
               window.location.href = url;
           }
       </script>
         {% for grade, classes in classes_by_grade.items() %}
-            <h1 class = "grade-label">{{ grade }}th Grade</h1>
+            <h1 class = "gradeLabel">{{ grade }}th Grade</h1>
             <table class = "{{ grade }} grades">
                 <tr>
                 <th>Class     </th>
@@ -24,7 +39,7 @@
                     <td>{{class.received_grade}}</td>
                     <td>{{class.credits}}</td>
                     <td style="border: none">
-                        <span class = "material-symbols-outlined delete" id = "delete-button" onclick="redirect('{{ url_for('dashboard.delete_class', class_id=class.id) }}')">delete</span>
+                        <span class = "material-symbols-outlined delete" id = "deleteButton" onclick="redirect('{{ url_for('dashboard.delete_class', class_id=class.id) }}')">delete</span>
                     </td>
                 </tr>
                 {% endfor %}
@@ -32,10 +47,10 @@
         {% endfor %}
       </div>
     </div>
-    <div class="right-widgets">
-      <div class = "class-widget visible">
-        <h1 class = "add-label">Add Classes</h1> <!--                                      update the 'add a class' text on submission-->
-        <form id = "add-class" action="{{ url_for('dashboard.dashboard') }}" method="POST" onsubmit="toggleVisibility()">
+    <div class="rightWidgets">
+      <div class = "classWidget visible">
+        <h1 class = "addLabel">Add Classes</h1> <!--                                      update the 'add a class' text on submission-->
+        <form id = "addClass" action="{{ url_for('dashboard.dashboard') }}" method="POST" onsubmit="toggleVisibility()">
 
               <input type = 'text' id = 'class' class = "enter" name = 'name' placeholder="Enter the class name" list="possibleClasses" required>
               <datalist id="possibleClasses">
@@ -44,6 +59,7 @@
                   {% endfor %}
               </datalist>
               <br>
+              <!-- <label for = "grade" class = "dropdownLabel">Grade Recieved:</label> -->
               <select class = "grade dropdown" id="grade" name = "received_grade" required>
                 <option value = "" disabled selected class = "initChoice">Class grade</option>
                 <option value="A">A</option>
@@ -75,16 +91,16 @@
                 <option value="Honors">Honors</option>
               </select>
               <br>
-              <button type="submit" class="submit-button">Add Class</button>
+              <button type="submit" class="submitButton" id="tutorial">Add Class</button>
 
         </form>
       </div>
 
-      <div class = "bottom-widget visible">
-        <h1 class = "info-label">Your Report</h1>
+      <div class = "bottomWidget visible">
+        <h1 class = "infoLabel">Your Report</h1>
         {% if has_classes %}
-          <h2 class="gpa-text">Unweighted GPA: {{ unweighted_gpa }}</h2>
-          <h2 class="gpa-text">Weighted GPA: {{ weighted_gpa }}</h2>
+          <h2 class="gpaText">Unweighted GPA: {{ unweighted_gpa }}</h2>
+          <h2 class="gpaText">Weighted GPA: {{ weighted_gpa }}</h2>
           <!-- prettier-ignore -->
           <a class = "getPDF" href = "{{ url_for('dashboard.download_report') }}">Download PDF</a>
     {% endif %}
@@ -93,11 +109,14 @@
 </div>
 
 
+
 <script>
-    const leftWidget = document.querySelector('.left-widget');
-    const table = document.querySelector('.table-div');
-    const bottomWidget = document.querySelector('.bottom-widget');
-    const classWidget = document.querySelector('.class-widget');
+    const leftWidget = document.querySelector('.leftWidget');
+    const table = document.querySelector('.tableDiv');
+    const bottomWidget = document.querySelector('.bottomWidget');
+    const classWidget = document.querySelector('.classWidget');
+    var addClass = document.getElementById('tutorial');
+
 
     window.onload = function () {
         if(table.getElementsByTagName('table').length < 1){
@@ -110,23 +129,147 @@
             bottomWidget.classList.add('visible');
             classWidget.classList.add('visible');
 
+
         }
     };
 
+
+    var step = 0;
+    var overlay = document.querySelector('.overlay');
+    var helpWidget = document.querySelector('.helpWidget');
+    var helpText = document.getElementById('help-text');
+    var helpNext = document.getElementById('next');
+    var helpBack = document.getElementById('back');
+
 /*
     document.addEventListener('click', function(event) {
-        classWidget.classList.remove('visible');
-        leftWidget.classList.remove('visible');
-        bottomWidget.classList.remove('visible');
+        if(step === 0){
+            overlay.style.display = 'block';
+            helpWidget.style.display = 'flex';
+            classWidget.style.zIndex = '0';
+            helpText.textContent = "Welcome to our interactive click-through tutorial! Click the green button to continue, and click the red button to go back a step!";
+            helpBack.style.display = 'none';
+            helpNext.style.display = 'flex';
+        }
     });
 */
+    function next(){
+        step++;
+        showStep();
+    }
 
-</script>
+    function back(){
+        if(step > 0){
+            step--;
+        }
+        showStep();
+    }
+/*
+    addClass.addEventListener('click', function() {
+        step = 2;
+        showStep();
+    });
+*/
+    async function showStep(){
+        if(step === 1){
+            classWidget.style.zIndex = '2';
+            helpText.textContent = "Here you may add a class. Fill out the fields with your class information. Hit 'Add Class' when you are done";
+            helpBack.style.display = 'none';
+            helpNext.style.display = 'none';
+            await fetch("/dashboard/update_tutorial_status");
+        }
+        if(step === 2){
+            overlay.style.display = 'block';
+            helpWidget.style.display = 'flex';
+            classWidget.style.zIndex = '0';
+            leftWidget.style.zIndex = '0';
+            bottomWidget.style.zIndex = '0';
+            helpWidget.style.left = '500px';
+            helpWidget.style.top = '200px';
+            helpWidget.style.height = "130px"
+            helpText.textContent = "Welcome to the full dashboard! Let's walk through the elements of this page.";
+            helpBack.style.display = 'none';
+            helpNext.style.display = 'flex';
+        }
+        if(step === 3){
+            overlay.style.display = 'block';
+            helpWidget.style.display = 'flex';
+            classWidget.style.zIndex = '2';
+            leftWidget.style.zIndex = '0';
+            bottomWidget.style.zIndex = '0';
+            helpWidget.style.left = '500px';
+            helpWidget.style.top = '50px';
+            helpWidget.style.height = "160px"
+            helpText.textContent = "Here you can see the 'Add Classes' widget you viewed earlier. The functionality remains the same.";
+            helpBack.style.display = 'flex';
+            helpNext.style.display = 'flex';
+        }
+        if(step === 4){
+            overlay.style.display = 'block';
+            helpWidget.style.display = 'flex';
+            classWidget.style.zIndex = '0';
+            leftWidget.style.zIndex = '2';
+            bottomWidget.style.zIndex = '0';
+            helpWidget.style.left = '850px';
+            helpWidget.style.top = '50px';
+            helpWidget.style.height = "130px"
+            helpText.textContent = "Here is your GPA Table, and here you can see the class you already put in!";
+            helpBack.style.display = 'flex';
+            helpNext.style.display = 'flex';
+        }
+        if(step === 5){
+            overlay.style.display = 'block';
+            helpWidget.style.display = 'flex';
+            classWidget.style.zIndex = '0';
+            leftWidget.style.zIndex = '0';
+            bottomWidget.style.zIndex = '2';
+            helpWidget.style.left = '500px';
+            helpWidget.style.top = '500px';
+            helpWidget.style.height = "135px"
+            helpText.textContent = "Here is your score report! You can also export your table + GPA as a PDF here as well.";
+            helpBack.style.display = 'flex';
+            helpNext.style.display = 'flex';
+        }
+        if(step === 6){
+            overlay.style.display = 'block';
+            helpWidget.style.display = 'flex';
+            classWidget.style.zIndex = '0';
+            leftWidget.style.zIndex = '0';
+            bottomWidget.style.zIndex = '0';
+            helpWidget.style.left = '500px';
+            helpWidget.style.top = '200px';
+            helpWidget.style.height = "160px"
+            helpText.textContent = "You have now completed the tutorial! Hit the 'continue' button to finish and happy calculating!";
+            helpBack.style.display = 'none';
+            helpNext.style.display = 'flex';
+        }
+        if(step === 7){
+            overlay.style.display = 'none';
+            helpWidget.style.display = 'none';
+            await fetch("/dashboard/update_tutorial_status");
+        }
+    }
+
+
+
+
+
 
     {% if tutorial_status == TutorialStatus.PART_ONE %}
-         code goes here for first half
+        if(step === 0){
+            overlay.style.display = 'block';
+            helpWidget.style.display = 'flex';
+            classWidget.style.zIndex = '0';
+            helpText.textContent = "Welcome to our interactive click-through tutorial! Click the green button to continue, and click the red button to go back a step!";
+            helpBack.style.display = 'none';
+            helpNext.style.display = 'flex';
+        }
+
     {% elif tutorial_status == TutorialStatus.PART_TWO %}
-        code goes here for second half
+        step = 2;
+        showStep();
+
     {% endif %}
 
+</script>
 {% endblock %}
