--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             <p>Step 4: Repeat steps 3 until you have put all the classes you want</p>
             <p>Step 5: Press 'Download PDF' to download your GPA table</p>
             <br>
-            <a class="get-pdf" href="{{ url_for('static', filename='website-overview.pdf') }}" download="website-overview.pdf">Download Tutorial</a>
+            <a class="getPDF" href="{{ url_for('static', filename='website-overview.pdf') }}" download="website-overview.pdf">Download Tutorial</a>
         </div>
     </div>
     <div style="height: 50px"></div>
